--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "files.exclude": {
-    "node_modules": true,
-    ".nuxt": true,
-    ".vscode": true
+    "node_modules": false,
+    ".nuxt": false,
+    ".vscode": false,
+    ".output": false
   }
 }
