--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "files.exclude": {
-    "node_modules": false,
-    ".nuxt": false,
-    ".vscode": false,
-    ".output": false
+    "node_modules": true,
+    ".nuxt": true,
+    ".vscode": true,
+    ".output": true
   }
 }
