--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	"dependencies": {
 		"@datocms/cda-client": "^0.2.7",
 		"@graphql-typed-document-node/core": "^3.2.0",
+		"@nuxt/eslint": "1.9.0",
 		"dotenv": "^17.2.3",
+		"eslint": "^9.37.0",
 		"nuxt": "^4.1.3",
 		"vue": "^3.5.22",
 		"vue-datocms": "8.1.4",
@@ -36,6 +38,7 @@
 		"sass": "^1.93.2",
 		"sass-loader": "^16.0.5",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"unplugin-vue-router": "^0.15.0"
 	}
 }
