--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"build": "nuxt build",
-		"dev": "nuxt dev & npm run codegen",
+		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"codegen": "graphql-codegen --watch",
@@ -14,26 +14,29 @@
 		"@datocms/cda-client": "^0.2.7",
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@nuxt/eslint": "1.9.0",
+		"@pinia/nuxt": "0.11.2",
 		"dotenv": "^17.2.3",
 		"eslint": "^9.37.0",
 		"nuxt": "^4.1.3",
+		"pinia": "^3.0.3",
+		"reka-ui": "^2.5.1",
+		"valibot": "^1.1.0",
 		"vue": "^3.5.22",
 		"vue-datocms": "8.1.4",
+		"vue-markdown-render": "^2.3.0",
 		"vue-router": "^4.5.1"
 	},
 	"packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd",
 	"devDependencies": {
+		"@element-plus/nuxt": "^1.1.4",
 		"@graphql-codegen/cli": "^5.0.7",
-		"@graphql-codegen/client-preset": "^5.1.0",
-		"@graphql-codegen/import-types-preset": "^3.0.1",
-		"@graphql-codegen/introspection": "^4.0.3",
 		"@graphql-codegen/typed-document-node": "^5.1.2",
 		"@graphql-codegen/typescript": "^4.1.6",
-		"@graphql-codegen/typescript-document-nodes": "^4.0.16",
 		"@graphql-codegen/typescript-graphql-files-modules": "^3.0.1",
 		"@graphql-codegen/typescript-operations": "^4.6.1",
-		"@graphql-codegen/typescript-resolvers": "^2.7.13",
 		"@parcel/watcher": "^2.5.1",
+		"@types/markdown-it": "^14.1.2",
+		"element-plus": "^2.11.4",
 		"graphql": "^16.11.0",
 		"sass": "^1.93.2",
 		"sass-loader": "^16.0.5",
