--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	},
 	"dependencies": {
 		"@nuxt/eslint": "1.9.0",
+		"@nuxtjs/i18n": "10.1.1",
 		"@pinia/nuxt": "0.11.2",
+		"@vueuse/nuxt": "13.9.0",
 		"dotenv": "^17.2.3",
 		"eslint": "^9.37.0",
 		"kt-nuxt-datocms": "github:bebejane/kt-nuxt-datocms",
