--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "files.exclude": {
-    "node_modules": true,
-    ".nuxt": true,
-    ".vscode": true,
-    ".output": true
+    "node_modules": false,
+    ".nuxt": false,
+    ".vscode": false,
+    ".output": false
   },
   "files.associations": {
     "*.css": "tailwindcss"
