--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-	"name": "nuxt-fem",
-	"type": "module",
-	"private": true,
-	"scripts": {
-		"build": "nuxt build",
-		"dev": "nuxt dev",
-		"cleanup": "rm -rf node_modules && rm -rf .nuxt && pnpm i && pnpm dev",
-		"generate": "nuxt generate",
-		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare"
-	},
-	"dependencies": {
-		"@nuxt/eslint": "1.9.0",
-		"@nuxtjs/i18n": "10.1.1",
-		"@pinia/nuxt": "0.11.2",
-		"@vueuse/nuxt": "13.9.0",
-		"dotenv": "^17.2.3",
-		"eslint": "^9.37.0",
-		"kt-nuxt-datocms": "github:bebejane/kt-nuxt-datocms",
-		"nuxt": "^4.1.3",
-		"pinia": "^3.0.3",
-		"reka-ui": "^2.5.1",
-		"valibot": "^1.1.0",
-		"vue": "^3.5.22",
-		"vue-router": "^4.5.1"
-	},
-	"packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd",
-	"devDependencies": {
-		"ts-node": "^10.9.2",
-		"typescript": "^5.9.3",
-		"unplugin-vue-router": "^0.15.0"
-	}
+  "name": "nuxt-fem",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "cleanup": "rm -rf node_modules && rm -rf .nuxt && pnpm i && pnpm dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@nuxt/eslint": "1.9.0",
+    "@pinia/nuxt": "0.11.2",
+    "@vueuse/nuxt": "13.9.0",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.37.0",
+    "nuxt": "^4.1.3",
+    "pinia": "^3.0.3",
+    "reka-ui": "^2.5.1",
+    "valibot": "^1.1.0",
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1",
+    "@kt-nuxt-datocms/base": "github:bebejane/kt-nuxt-datocms#path:packages/base",
+    "@kt-nuxt-datocms/i18n": "github:bebejane/kt-nuxt-datocms#path:packages/i18n"
+  },
+  "packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd",
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "unplugin-vue-router": "^0.15.0"
+  }
 }
