--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@kt-nuxt-datocms/base": "github:bebejane/kt-nuxt-datocms#path:packages/base",
     "@kt-nuxt-datocms/i18n": "github:bebejane/kt-nuxt-datocms#path:packages/i18n",
+    "@kt-nuxt-datocms/dev": "github:bebejane/kt-nuxt-datocms#path:packages/dev",
     "@nuxt/eslint": "1.9.0",
     "@pinia/nuxt": "0.11.2",
     "@vueuse/nuxt": "13.9.0",
