--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@kt-nuxt-datocms/base": "github:bebejane/kt-nuxt-datocms#path:packages/base",
-    "@kt-nuxt-datocms/i18n": "github:bebejane/kt-nuxt-datocms#path:packages/i18n",
-    "@kt-nuxt-datocms/dev": "github:bebejane/kt-nuxt-datocms#path:packages/dev",
+    "@kt-nuxt/base": "github:bebejane/kt-nuxt#path:packages/base",
+    "@kt-nuxt/i18n": "github:bebejane/kt-nuxt#path:packages/i18n",
+    "@kt-nuxt/dev": "github:bebejane/kt-nuxt#path:packages/dev",
     "@nuxt/eslint": "1.9.0",
     "@pinia/nuxt": "0.11.2",
     "@vueuse/nuxt": "13.9.0",
