--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@datocms/cma-client": "5.1.22",
     "@kt-nuxt/base": "github:bebejane/kt-nuxt#path:packages/base",
-    "@kt-nuxt/i18n": "github:bebejane/kt-nuxt#path:packages/i18n",
     "@kt-nuxt/dev": "github:bebejane/kt-nuxt#path:packages/dev",
+    "@kt-nuxt/i18n": "github:bebejane/kt-nuxt#path:packages/i18n",
     "@nuxt/eslint": "1.9.0",
     "@pinia/nuxt": "0.11.2",
     "@vueuse/nuxt": "13.9.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "nuxt-auth-utils": "0.5.25",
     "pinia": "^3.0.3",
     "reka-ui": "^2.5.1",
     "valibot": "^1.1.0",
